<resources>
    <string name="app_name">Servant</string>

    <!-- string for todolist Activity-->
    <string name="todolist_menu_sort">Sort by</string>
    <string name="todolist_menu_display">Display</string>
    <string name="todolist_ben_selecttime_text">Pick Time</string>
    <string name="todolist_ben_selectdate_text">Pick Date</string>
    <string name="todolistitem_title">Title</string>
    <string name="btn_confirm_detaildialog">Add</string>
    <string name="btn_clear_detaildialog">Clear</string>
    <string name="todolistitem_description">Description</string>
    <string name="todolist_confirm_text">Confirm</string>
    <string name="todolist_clear_text">Clear</string>
    <string name="todolist_cancel_text">Cancel</string>
    <string name="todoiteminput_edittext_activitytodolist_text">Please input a new todo item</string>
    <string name="clear_confirmation_dialog_text">Are you sure to clear all fields?</string>
    <string name="display_completed_todoitems">Display Completed ToDoItems</string>
    <string name="display_incompleted_todoitems">Display Incompleted ToDoItems</string>
    <string name="display_notstarted_todoitems">Display Not Started ToDoItems</string>

    <!-- Menu dialog box radio button text-->
    <string name="sort_menu_radiobutton_sortbydeadline">Sort by Deadline</string>
    <string name="sort_menu_radiobutton_sortbypriority">Sort by Priority</string>
    <string name="sort_menu_radiobutton_sortbytitle">Sort by Title</string>
    <string name="sort_menu_radiobutton_sortbydateandtimecreated">Sort by Time Added</string>
    <string name="sort_menu_radiobutton_displayincompleteditems">Display Incompleted Items</string>
    <string name="sort_menu_radiobutton_displaynotstarteditems">Display Not Started Items</string>
    <string name="sort_menu_radiobutton_displaycompleteditems">Display Completed Items</string>

    <string-array name="priority_level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="menu_sort_standard">
        <item>Priority</item>
        <item>Deadline</item>
        <item>Time Added</item>
        <item>Title</item>
    </string-array>

    <string-array name="menu_display_standard">
        <item>Incomplete</item>
        <item>Complete</item>
        <item>Not Started</item>
        <item>All</item>
    </string-array>

    <string-array name="todoitem_complete_status">
        <item>Mark as incomplete</item>
        <item>Mark as not started</item>
        <item>Mark as complete</item>
    </string-array>
</resources>
