<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:src="@mipmap/todolistitem_header" />

    <EditText
        android:id="@+id/edittext_title_todolistitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todolistitem_title" />

    <Spinner
        android:id="@+id/spinner_priority_todolistitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/todolist_btn_selecttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todolist_ben_selecttime_text" />

        <Button
            android:id="@+id/todolist_btn_selectdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todolist_ben_selectdate_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/edittext_description_todolistitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/todolistitemdescription"
        android:hint="@string/todolistitem_description"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btn_confirm_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_confirm_detaildialog" />

</LinearLayout>