<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RadioButton
        android:id="@+id/radiobutton_display_incompleteditems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_menu_radiobutton_displayincompleteditems"></RadioButton>

    <RadioButton
        android:id="@+id/radiobutton_display_notstartedditems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_menu_radiobutton_displaynotstarteditems"></RadioButton>

    <RadioButton
        android:id="@+id/radiobutton_display_completeditems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_menu_radiobutton_displaycompleteditems"></RadioButton>

</RadioGroup>
